force-app/main/default/objects/Swap_Rate__c/Swap_Rate__c.object-meta.xml
<CustomObject>
    <description>Swap Rates</description>
    <label>Swap Rates</label>
    <nameField>
        <label>Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Swap Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>