force-app/main/default/objects/Swap_Rate__c/fields/CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Swap Rate added date time stamp</description>
    <label>CreatedDateTime</label>
    <type>DateTime</type>
</CustomField>