force-app/main/default/objects/Swap_Rate__c/fields/OneM_LIBOR__c.field-meta.xml
<CustomField>
    <fullName>OneM_LIBOR__c</fullName>
    <label>1M LIBOR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>