force-app/main/default/objects/Swap_Rate__c/fields/OneM_SOFR__c.field-meta.xml
<CustomField>
    <fullName>OneM_SOFR__c</fullName>
    <description>1 Month Secured Overnight Financing Rate</description>
    <inlineHelpText>1 Month Secured Overnight Financing Rate</inlineHelpText>
    <label>1M SOFR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>