force-app/main/default/objects/Swap_Rate__c/fields/Ten_Year_Swap__c.field-meta.xml
<CustomField>
    <fullName>Ten_Year_Swap__c</fullName>
    <label>10 Year Swap</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>