force-app/main/default/objects/Swap_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CreatedDateTime__c</columns>
    <columns>Five_Year_Swap__c</columns>
    <columns>Seven_Year_Swap__c</columns>
    <columns>Ten_Year_Swap__c</columns>
    <columns>Thirty_Year_Swap__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>